# search

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extract-db.py  filesplit.py  heaptrack.search.133434.zst  heaptrack.search.1612458.zst  lib.c  sizes  test.c  test.ll  test.s  test1.ll
OleanderStemmingLibrary/: doxygen.config
kvdb/: CMakeLists.txt  helpguide.txt
kvdb/lmdb/: mdb.c  mdb_copy  mdb_drop  mdb_dump  mdb_load  mdb_stat  mtest  mtest2  mtest3  mtest4  mtest5
kvdb/lmdb/testdb/: data.mdb
kvdb/source/: Database.cpp  Database.h  main.cpp
kvdb/testdb/: lock.mdb
python/: index.html  index.js  query_console.py  search_lib.py  style.css  table_manager.py  test.py  web.py
rust/: Cargo.toml  debug.txt
rust/.cargo/: config.toml
rust/metastore/: Cargo.toml  foo5
rust/metastore-server/: Cargo.toml  api.http  build.rs  testdata.json
rust/metastore-server/python-tests/: json_generation_test.py  multiple_transactions_test.py
rust/metastore-server/python-tests/proto_generated/: grpc_pb2.py  grpc_pb2_grpc.py
rust/metastore-server/src/: async_replication_handler.rs  follower_grpc_server.rs  grpc.proto  grpc_defs.rs  grpc_server.rs  hyper_error_converter.rs  hyperserver.rs  json_request_writers.rs  main.rs  main_db_impl.rs  replicator_entrypoint.rs  test_grpc_server.rs
rust/metastore-server/src/json_request_writers/: json_data_model_tests.rs  json_processing.rs
rust/metastore-server/src/replicated_slave/: metastore.rs
rust/metastore/src/: C_interface.rs  api.http  btree_index.rs  btreemap_kv_backend.rs  c_interface.rs  cyclomatic.rs  db_context.rs  debugging_utils.rs  error_macro.rs  extensions_interface.rs  file_debugger.rs  hermitage_tests.rs  history_storage.rs  hyper_error_converter.rs  hyperserver.rs  json_data_model_tests.rs  json_processing.rs  kv_backend.rs  lib.rs  local_replication_handler.rs  lock_data_manager.rs  main.rs  mvcc_manager.rs  mvcc_metadata.rs  object_path.rs  parsing.rs  replicated_slave.rs  retry.rs  rpc_handler.rs  rwtransaction_wrapper.rs  test_transaction_generate.rs  testdata.json  thread_tests.rs  timestamp.rs  tuple_maker.rs
rust/metastore/src/mvcc_manager/: mvcc_metadata.rs
rust/metastore/src/replicated_slave/: grpc.pb.cc  grpc.pb.h  grpc.proto
rust/metastore/src/rwtransaction_wrapper/: json_request_writers.rs  mvcc_manager.rs
rust/metastore/src/rwtransaction_wrapper/json_request_writers/: json_data_model_tests.rs  json_processing.rs
rust/metastore/src/rwtransaction_wrapper/mvcc_manager/: btreemap_kv_backend.rs  kv_backend.rs  lock_data_manager.rs  mvcc_metadata.rs  typed_value.rs  value_with_mvcc.rs
rust/metastore/src/wal_watcher/: data.txt  mod.rs  serialize_deserialize.rs  test.rs  wal_apply.rs  wal_check_consistency.rs
rust/namesdb/: Cargo.toml
rust/namesdb/src/: NameDatabase.rs  lib.rs
rust/src/: IndexWorker.rs  NameDatabase.rs  RustVecInterface.rs  build.rs  cffi.rs  elapsed_span.rs  highlighter.rs  index_file_checker.rs  lib.rs  main.rs  microsecond_timer.rs  webserver.rs
rust/thread-check/: Cargo.toml
rust/thread-check/src/: main.rs
rust/webserver/: Cargo.toml  build.rs  check_search.py
rust/webserver/src/: IndexWorker.rs  RustVecInterface.rs  cffi.rs  dir_finder.rs  elapsed_span.rs  highlighter.rs  lib.rs  main.rs  webserver.rs
source/: Base26Num.cpp  Base26Num.h  Constants.cpp  Constants.h  ContiguousAllocator.cpp  ContiguousAllocator.h  CustomAllocatedVec.cpp  CustomAllocatedVec.h  DocIDFilePair.cpp  DocIDFilePair.h  DocumentFrequency.cpp  DocumentFrequency.h  DocumentPositionPointer.cpp  DocumentPositionPointer.h  DocumentsMatcher.cpp  DocumentsMatcher.h  DocumentsTier.cpp  DocumentsTier.h  FPStub.cpp  FPStub.h  FileListGenerator.cpp  FileListGenerator.h  GeneralIndexer.cpp  GeneralIndexer.h  IndexFileLocker.h  IndexStubCApi.cpp  IndexStubCApi.h  PositionsSearcher.cpp  PositionsSearcher.h  PositionsSolver.cpp  PositionsSolver.h  PossiblyMatchingTerm.cpp  PossiblyMatchingTerm.h  ResultsPrinter.cpp  ResultsPrinter.h  Serializer.cpp  Serializer.h  SortedKeysIndex.cpp  SortedKeysIndex.h  SortedKeysIndexStub.cpp  (+24 more)
source/compactor/: Compactor.cpp  Compactor.h  main.cpp
source/test/: CMakeLists.txt  all_includes.h  doc-matcher-test.cpp  indexer_c_lib.cpp  indexing_test.cpp  multiple-indices-test.cpp  positions_searcher_test.cpp  searching-strings.cpp  test-main.cpp  topdocs-test.cpp
website/: index.html
