[package]
name = "rust"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1"
rmp-serde = "0.15.4"
serde_json = "1.0.64"
aho-corasick = "0.7.18"
openssl = { version = "0.10", features = ["v110"] }
futures = "0.3.15"
tokio = { version = "^1.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.18"
chrono = "0.4"
actix-rt = "^2.2"
actix-web = {version = "4.0.0-beta.6", features = ["openssl"]}

[profile.dev]
rpath = true

[lib]
crate-type = ["cdylib"]