[package]
name = "metastore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
futures = "*"
tokio = { version = "^1", features = ["full"] }
hyper = { version = "*", features = ["full"] }
slab = "*"
syslog = "*"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"