[package]
name = "metastore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = {version = "*", features = ["derive"]}
slab = "*"
rand = "*"
lazy_static = "*"
quickcheck = "1.0.3"
crossbeam = "*"
log = "*"
parking_lot = "*"
quickcheck_macros = "1.0.0"