[package]
name = "namesdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15.4"
serde = "1.0.126"
webserver = {path ="../webserver"}
regex = "1.5.4"
serde_json = "1.0.64"

[lib]
crate-type = ["cdylib"]