[package]
name = "webserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json = "^1"
aho-corasick = "^0.7"
futures = "0.3.15"
tokio = { version = "^1", features = ["full"] }
tracing = { version = "^0.1.26", features = ["log"] }
tracing-subscriber = "^0.2"
hyper = { version = "^0.14", features = ["full"] }
env_logger = "^0.8"
indicatif = "0.16.2"